fixtures/iptables/rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Dec 14 18:48:31 2025
*raw
:PREROUTING ACCEPT [176629534:326507115162]
:OUTPUT ACCEPT [182646079:163272363966]
-A PREROUTING -s 82.97.0.0/16 -j DROP
-A PREROUTING -s 82.97.0.0/16 -j DROP
-A PREROUTING -s 82.97.0.0/16 -j DROP
-A PREROUTING -s 182.8.0.0/16 -j DROP
-A PREROUTING -s 1.178.48.0/20 -m comment --comment huawei -j DROP
-A PREROUTING -s 101.44.0.0/20 -m comment --comment huawei -j DROP
-A PREROUTING -s 89.116.97.0/24 -m comment --comment "AS210906 scrapers" -j DROP
COMMIT
# Completed on Sun Dec 14 18:48:31 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Dec 14 18:48:31 2025
*filter
:INPUT ACCEPT [176628456:326507003894]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [182646079:163272363966]
:ufw-after-forward - [0:0]
:ufw-after-input - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-output - [0:0]
:ufw-before-forward - [0:0]
:ufw-before-input - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-output - [0:0]
:ufw-reject-forward - [0:0]
:ufw-reject-input - [0:0]
:ufw-reject-output - [0:0]
:ufw-track-forward - [0:0]
:ufw-track-input - [0:0]
:ufw-track-output - [0:0]
-A INPUT -j ufw-before-logging-input
-A INPUT -j ufw-before-input
-A INPUT -j ufw-after-input
-A INPUT -j ufw-after-logging-input
-A INPUT -j ufw-reject-input
-A INPUT -j ufw-track-input
-A FORWARD -j ufw-before-logging-forward
-A FORWARD -j ufw-before-forward
-A FORWARD -j ufw-after-forward
-A FORWARD -j ufw-after-logging-forward
-A FORWARD -j ufw-reject-forward
-A FORWARD -j ufw-track-forward
-A OUTPUT -j ufw-before-logging-output
-A OUTPUT -j ufw-before-output
-A OUTPUT -j ufw-after-output
-A OUTPUT -j ufw-after-logging-output
-A OUTPUT -j ufw-reject-output
-A OUTPUT -j ufw-track-output
COMMIT
# Completed on Sun Dec 14 18:48:31 2025
