fixtures/iptables/rules.v6
# Generated by ip6tables-save v1.8.10 (nf_tables) on Sun Dec 14 18:48:31 2025
*raw
:PREROUTING ACCEPT [31524937:6638507376]
:OUTPUT ACCEPT [31774512:30532782380]
-A PREROUTING -s 2404:a140:43::/48 -j DROP
-A PREROUTING -s 2405:f080::/39 -m comment --comment huawei -j DROP
COMMIT
# Completed on Sun Dec 14 18:48:31 2025
# Generated by ip6tables-save v1.8.10 (nf_tables) on Sun Dec 14 18:48:31 2025
*filter
:INPUT ACCEPT [31524486:6638446769]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [31774512:30532782380]
:ufw6-after-forward - [0:0]
:ufw6-after-input - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-output - [0:0]
:ufw6-before-forward - [0:0]
:ufw6-before-input - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-output - [0:0]
:ufw6-reject-forward - [0:0]
:ufw6-reject-input - [0:0]
:ufw6-reject-output - [0:0]
:ufw6-track-forward - [0:0]
:ufw6-track-input - [0:0]
:ufw6-track-output - [0:0]
-A INPUT -j ufw6-before-logging-input
-A INPUT -j ufw6-before-input
-A INPUT -j ufw6-after-input
-A INPUT -j ufw6-after-logging-input
-A INPUT -j ufw6-reject-input
-A INPUT -j ufw6-track-input
-A FORWARD -j ufw6-before-logging-forward
-A FORWARD -j ufw6-before-forward
-A FORWARD -j ufw6-after-forward
-A FORWARD -j ufw6-after-logging-forward
-A FORWARD -j ufw6-reject-forward
-A FORWARD -j ufw6-track-forward
-A OUTPUT -j ufw6-before-logging-output
-A OUTPUT -j ufw6-before-output
-A OUTPUT -j ufw6-after-output
-A OUTPUT -j ufw6-after-logging-output
-A OUTPUT -j ufw6-reject-output
-A OUTPUT -j ufw6-track-output
COMMIT
# Completed on Sun Dec 14 18:48:31 2025
